--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
 }
 
 .search-form {
@@ -74,6 +75,7 @@
 
 .pizza {
   width: 40%;
+  padding-left: 5px;
 }
 
 .buttonDiv {
@@ -116,3 +118,12 @@
   }
 }
 
+@media screen and (max-width: 768px) { 
+  .pizza {
+      width: 30%;
+  }
+  .search-bar {
+    width: 70%;
+    margin-left: 10px;
+  }
+}
