--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500');
+
+
 /* ===================================== 
    ScrollBar
 ======================================== */
@@ -75,6 +78,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  height: 50%;
 }
 
 .headName {
@@ -88,16 +92,6 @@
   display: none;
 }
 
-.home {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  flex-direction: column;
-}
-
 .pizza {
   width: 40%;
   padding-left: 5px;
@@ -107,6 +101,33 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.loader > span {
+  display: inline-block;
+  background-color: purple;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  margin: 0 8px;
+  transform: translate3d(0);
+  animation: bounce 0.6s infinite alternate;
+}
+
+.loader > span:nth-child(2) {
+  background-color: palevioletred;
+  animation-delay: 0.2s;
+}
+
+.loader > span:nth-child(3) {
+  animation-delay: 0.4s;
 }
 
 
@@ -143,6 +164,12 @@
   }
 }
 
+@keyframes bounce {
+  to {
+    transform: translate3d(0, -16px, 0);
+  }
+}
+
 @media screen and (max-width: 768px) { 
   .pizza {
       width: 30%;
@@ -152,3 +179,6 @@
     margin-left: 10px;
   }
 }
+
+
+
