--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500');
+
+
 .recipe {
     border-radius: 10px;
     box-shadow: 0px 5px 20px rgb(71,71,71);
@@ -10,6 +13,7 @@
     width: 40%;
     animation: 2s fadeIn;
     animation-delay: 2s;
+    font-family: 'Roboto', sans-serif;
 }
 
 .image {
@@ -23,21 +27,25 @@
 .recipe h1 {
     border-bottom: 1px dashed black;
     text-align: center;
+    color: black;
+    font-weight: 500;
 }
+
 
 ul {
     max-width: 50%;
     list-style-type: square;
+    columns: 1;
 }
 
 li {
   margin: 10px 0;
+  line-height: 1.2em;
 }
 
-
 .recipe p {
-    /* margin-top: auto; */
     border-bottom: 1px dashed black;
+    font-weight: 300;
 }
 
 a {
